2009-09-03  Mike Kestner <mkestner@novell.com>

	* StartPage.cs: add Quick Sessions section to repeat configs from
	the history.

2009-09-03  Mike Kestner <mkestner@novell.com>

	* History.cs: add recent config support.
	* ProfileConfiguration.cs: new encapsulation for profile params.
	* ProfilerProcess.cs: construct from ProfileConfiguation.
	* ProfileSetupDialog.cs: expose Config prop.  Manage the Execute
	response button sensitivity proactively.

2009-08-28  Mike Kestner <mkestner@novell.com>

	* StartPage.cs: a little banner gradient tweaking.

2009-08-28  Mike Kestner <mkestner@novell.com>

	* History.cs: basic history tracking xml serialized class.
	* StartPage.cs: display recent logs using new history.

2009-08-27  Mike Kestner <mkestner@novell.com>

	* StartPage.cs: beginnings of a startup page similar to MD.

2009-08-19  Mike Kestner <mkestner@novell.com>

	* ProfilerProcess.cs: new class to manage creation of and comm
	with the profiler.  Initial suspend/resume capability.
	* ProfileSetupDialog.cs: add StartEnabled feature to control logging
	status on startup.
	* ProfileView.cs: use new reader iteration paradigm.

2009-08-04  Mike Kestner <mkestner@novell.com>

	* ProfileView.cs: add SupportsFiltering prop to support action 
	sensitivity in menu.

2009-07-30  Mike Kestner <mkestner@novell.com>

	* Node.cs: add a DescendingValue comparison.

2009-07-15  Mike Kestner <mkestner@novell.com>

	* AllocationsView.cs: make it a ScrolledWindow subclass.
	* CallsView.cs: make it a ScrolledWindow subclass.
	* DisplayOptions.cs: file rename
	* ProfileSetupDialog.cs: add support for stat profiling. default to
	stat profiling.
	* ProfileView.cs: not scrollable, the child views manage their own
	scrolling now. Load profiles by data content instead of explicitly.
	Close the reader when done loading to avoid access sharing problems.
	* StatDetail.cs: notebook to display calls and callers info for 
	statistical hit items.